...

  @override
  Widget build(BuildContext context) {
    final theme = context.watch<ThemeController>().currentTheme;
    
    return MainScaffold(
      key: const Key('home_screen'),
      body: SingleChildScrollView(
        child: Stack(
          children: [
            Positioned.fill(
              child: theme.mainBackgroundImage != null
                  ? Opacity(
...
