...
  Widget build(BuildContext context) {
    final screenHeight = MediaQuery.of(context).size.height;
    final isMobile = MediaQuery.of(context).size.width < 500;
    final theme = context.watch<ThemeController>().currentTheme;

    return Scaffold(
      key: const Key('upload_page'),
      backgroundColor: theme.mainBackgroundColor,
      appBar: AppBar(
        backgroundColor: theme.topBarColor,
        centerTitle: true,
          title: Image.asset(
            theme.logo, 
...
            fit: BoxFit.contain,
          ), 
        automaticallyImplyLeading: false,
        actions: [
          IconButton(
            icon: const Icon(Icons.close),
            key: const Key('exit_button'),
            color: theme.primaryColor,
            onPressed: () {
              context.read<TtsService>().speak("Are you sure you want to exit?");
              showModalBottomSheet(
                context: context,
                builder: (context) => Container(
...
                              context.read<TtsService>().speak("Remaining on Upload"),
                              Navigator.of(context).pop()
                            },
                            child: const Text('Keep Posting'),
                          ),
                          ElevatedButton(
                            key: const Key('leave_button'),
                            onPressed: () {
                              context.read<TtsService>().speak("Exiting Upload");
                              Navigator.of(context).pop();
                              Navigator.of(context).pop();
                            },
                            child: const Text('Leave'),
...
