...
                                  if (widget.type ==
                                      MediaCardType.myReview) ...[
                                    IconButton(
                                      icon: Icon(
                                        _isEditing ? Icons.check : Icons.edit,
                                      ),
                                      key: const Key('edit_button'),
                                      color: Colors.black,
                                      style: IconButton.styleFrom(
                                        backgroundColor: _isEditing
                                            ? const Color.fromARGB(
                                                255,
                                                136,
...
                                          children: [
                                            // black box checkbox
                                            Container(
                                              width: 24,
                                              height: 24,
                                              child: Checkbox(
                                                key: const Key('edit_spoilers'),
                                                value: _spoilers,
                                                onChanged: (bool? value) {
                                                  setState(() {
                                                    context
                                                        .read<TtsService>()
                                                        .speak(
...
