...

  @override
  Widget build(BuildContext context) {
    final theme = context.watch<ThemeController>().currentTheme;

    return Dialog(
      key: const Key('badge_earned'),
      shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(20)),
      child: Stack(
        alignment: Alignment.topCenter,
        children: [
          Container(
            width: 400,
...
                      fontWeight: FontWeight.bold,
                      color: Colors.black,
                    ),
                  ),
                  const SizedBox(height: 5),
                  TextButton(
                    key: const Key('close_badge_earned'),
                    onPressed: () => Navigator.pop(context),
                    child: const ComicTitle(title: "Close", size: 12),
                  ),
                ],
              ),
            ),
...
