...
                  ComicTitle(title: widget.username == null ? 'My Reviews' : "${widget.username}'s Reviews", size: 25),
                  const SizedBox(height: 10),
                  AnimatedSwitcher(
                    duration: const Duration(milliseconds: 300),
                    child: _isSearching
                        ? TextField(
                            key: const ValueKey('searchField'),
                            controller: _controller,
                            autofocus: true,
                            style: TextStyle(color: theme.primaryColor),
                            decoration: InputDecoration(
                              hintText: 'Search My Reviews by Title',
                              hintStyle: TextStyle(color: theme.primaryColor),
...
                                  selectedType: mediaFilter,
                                  onChanged: _onFilterChanged,
                                ),
                              ),
                              IconButton(
                                icon: const Icon(Icons.search),
                                key: const Key('my_reviews_search'),
                                color: theme.primaryColor,
                                onPressed: () {
                                  setState(() {
                                    _isSearching = true;
                                  });
                                },
...
